fixed titlebar misalignment

--- a/discord_themes/project_nova/crysis2Hud/projectNova_crysis2Hud_SourrR34.css
+++ b/discord_themes/project_nova/crysis2Hud/projectNova_crysis2Hud_SourrR34.css
@@ -57,7 +57,7 @@
     background: transparent;
     box-shadow: none;
     position: relative;
-    top: calc(16.2vh + 2px); /*always +2px of top property in [class*="layers_"] > [class*="layer_"]*/
+    top: calc(16vh + 2px); /*always +2px of top property in [class*="layers_"] > [class*="layer_"]*/
     z-index: 1001; /* fix for windows button + watermark appearing over popouts and images */
 }
 #app-mount > div[class*="titleBar"] > div[aria-label="Close"]{
